--- a/app/views/devise/passwords/edit.html.haml
+++ b/app/views/devise/passwords/edit.html.haml
@@ -1,19 +1,16 @@
-%h2 Change your password
-= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f|
+%h1.display-4 Change your password
+= form_for resource, as: resource_name, url: password_path(resource_name), html: { method: :put } do |f|
   = devise_error_messages!
   = f.hidden_field :reset_password_token
-  .field
-    = f.label :password, "New password"
-    %br/
+  .form-group
+    = f.password_field :password, autofocus: true, autocomplete: 'off', class: 'form-control form-control-lg', placeholder: 'New password'
     - if @minimum_password_length
-      %em
-        (#{@minimum_password_length} characters minimum)
-      %br/
-    = f.password_field :password, autofocus: true, autocomplete: "off"
-  .field
-    = f.label :password_confirmation, "Confirm new password"
-    %br/
-    = f.password_field :password_confirmation, autocomplete: "off"
-  .actions
-    = f.submit "Change my password"
-= render "devise/shared/links"
+      %small.form-text.text-muted #{@minimum_password_length} characters minimum
+  .form-group
+    = f.password_field :password_confirmation, autocomplete: 'off', class: 'form-control form-control-lg', placeholder: 'Confirm new password'
+  .form-group
+    = f.submit 'Change my password', class: 'btn btn-light'
+  .form-group
+    = link_to 'Log in', new_session_path(resource_name)
+    or
+    = link_to 'Sign up', new_registration_path(resource_name)
