--- a/app/views/devise/passwords/new.html.haml
+++ b/app/views/devise/passwords/new.html.haml
@@ -1,10 +1,11 @@
-%h2 Forgot your password?
-= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f|
+%h1.display-4 Forgot your password?
+= form_for resource, as: resource_name, url: password_path(resource_name), html: { method: :post } do |f|
   = devise_error_messages!
-  .field
-    = f.label :email
-    %br/
-    = f.email_field :email, autofocus: true
-  .actions
-    = f.submit "Send me reset password instructions"
-= render "devise/shared/links"
+  .form-group
+    = f.email_field :email, autofocus: true, class: 'form-control form-control-lg', placeholder: 'Email'
+  .form-group
+    = f.submit 'Send me reset password instructions', class: 'btn btn-light'
+  .form-group
+    = link_to 'Log in', new_session_path(resource_name)
+    or
+    = link_to 'Sign up', new_registration_path(resource_name)
