--- a/app/views/devise/registrations/edit.html.haml
+++ b/app/views/devise/registrations/edit.html.haml
@@ -1,40 +1,24 @@
-%h2
-  Edit #{resource_name.to_s.humanize}
-= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f|
+%h1.display-4 Edit Profile
+= form_for resource, as: resource_name, url: registration_path(resource_name), html: { method: :put } do |f|
   = devise_error_messages!
-  .field
-    = f.label :email
-    %br/
-    = f.email_field :email, autofocus: true
-  .field
-    = f.label :name
-    %br/
-    = f.text_field :name
-  - if devise_mapping.confirmable? && resource.pending_reconfirmation?
-    %div
-      Currently waiting confirmation for: #{resource.unconfirmed_email}
-  .field
-    = f.label :password
-    %i (leave blank if you don't want to change it)
-    %br/
-    = f.password_field :password, autocomplete: "off"
+  .form-group
+    = f.text_field :name, autofocus: true, class: 'form-control form-control-lg', placeholder: 'Name'
+  .form-group
+    = f.email_field :email, class: 'form-control form-control-lg', placeholder: 'Email'
+  .form-group
+    = f.password_field :password, autocomplete: 'off', class: 'form-control form-control-lg', placeholder: 'New password'
     - if @minimum_password_length
-      %br/
-      %em
-        = @minimum_password_length
-        characters minimum
-  .field
-    = f.label :password_confirmation
-    %br/
-    = f.password_field :password_confirmation, autocomplete: "off"
-  .field
-    = f.label :current_password
-    %i (we need your current password to confirm your changes)
-    %br/
-    = f.password_field :current_password, autocomplete: "off"
-  .actions
-    = f.submit "Update"
-%h3 Cancel my account
+      %small.form-text.text-muted
+        Leave blank if you don't want to change it. #{@minimum_password_length} characters minimum.
+  .form-group
+    = f.password_field :password_confirmation, autocomplete: 'off', class: 'form-control form-control-lg', placeholder: 'Confirm new password'
+  .form-group
+    = f.password_field :current_password, autocomplete: 'off', class: 'form-control form-control-lg', placeholder: 'Current password'
+    %small.form-text.text-muted We need your current password to confirm your changes.
+  .form-group
+    = f.submit 'Update', class: 'btn btn-light'
+
+%h1.display-5.text-danger Danger Zone
 %p
-  Unhappy? #{button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete}
-= link_to "Back", :back
+  Unhappy?
+  = link_to 'Delete my account', registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete
