--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -1,25 +1,17 @@
-%h2 Sign up
-= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
+%h1.display-4
+  = link_to 'Log in', new_session_path(resource_name)
+  \/ Sign up
+= form_for resource, as: resource_name, url: registration_path(resource_name) do |f|
   = devise_error_messages!
-  .field
-    = f.label :email
-    %br/
-    = f.email_field :email, autofocus: true
-  .field
-    = f.label :name
-    %br/
-    = f.text_field :name
-  .field
-    = f.label :password
+  .form-group
+    = f.text_field :name, autofocus: true, class: 'form-control form-control-lg', placeholder: 'Name'
+  .form-group
+    = f.email_field :email, class: 'form-control form-control-lg', placeholder: 'Email'
+  .form-group
+    = f.password_field :password, autocomplete: 'off', class: 'form-control form-control-lg', placeholder: 'Password'
     - if @minimum_password_length
-      %em
-        (#{@minimum_password_length} characters minimum)
-    %br/
-    = f.password_field :password, autocomplete: "off"
-  .field
-    = f.label :password_confirmation
-    %br/
-    = f.password_field :password_confirmation, autocomplete: "off"
-  .actions
-    = f.submit "Sign up"
-= render "devise/shared/links"
+      %small.form-text.text-muted #{@minimum_password_length} characters minimum
+  .form-group
+    = f.password_field :password_confirmation, autocomplete: 'off', class: 'form-control form-control-lg', placeholder: 'Confirm password'
+  .form-group
+    = f.submit 'Sign up', class: 'btn btn-light'
