--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -10,3 +10,6 @@
 
 %p
   Member since #{time_ago_in_words @user.created_at}.
+
+%h1.display-6 Groups
+= render partial: 'user_groups/table', locals: {user_groups: @user.user_groups}
