--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -1,11 +1,6 @@
 %h1.display-4 Users
 
 - if @users.length > 0
-  %table.table.table-striped
-    %tbody
-      - @users.each do |user|
-        %tr
-          %td.td-link{width: 10}
-            = link_to user.name, user
+  = render partial: 'table', locals: {users: @users}
 - else
   No users found...
