--- a/app/views/user_groups/show.html.haml
+++ b/app/views/user_groups/show.html.haml
@@ -5,9 +5,10 @@
 
 %h1.display-5
   = @user_group.name
-  - if @membership
+  - if policy(@user_group).update?
     = link_to edit_user_group_path(@user_group), class: 'btn btn-light' do
       = fa_icon 'pencil', text: 'Edit'
+  - if @membership
     = link_to user_group_membership_path(@user_group, @membership), method: :delete, class: 'btn btn-light' do
       = fa_icon 'times', text: 'Leave'
   - else
