add data sources

--- a/app/views/devise/passwords/new.html.haml
+++ b/app/views/devise/passwords/new.html.haml
@@ -4,7 +4,7 @@
   .form-group
     = f.email_field :email, autofocus: true, class: 'form-control form-control-lg', placeholder: 'Email'
   .form-group
-    = f.submit 'Send me reset password instructions', class: 'btn btn-light'
+    = f.submit 'Send me reset password instructions', class: 'btn btn-lg btn-light'
   .form-group
     = link_to 'Log in', new_session_path(resource_name)
     or
