--- a/app/views/messages/_form.html.haml
+++ b/app/views/messages/_form.html.haml
@@ -1,4 +1,4 @@
-= form_for [@conversation, @message] do |f|
+= form_with model:[@conversation, @message] do |f|
   - if @message.errors.any?
     #error_explanation
       %h2= "#{pluralize(@message.errors.count, "error")} prohibited this message from being saved:"
@@ -6,6 +6,7 @@
         - @message.errors.full_messages.each do |message|
           %li= message
 
-  .input-group
-    = f.text_field :body, class: 'form-control form-control-lg', autofocus: true
-    = f.submit 'Send', class: 'input-group-addon'
+  .form-group
+    = f.text_area :body, rows: 10, placeholder: 'Write here to reply...' ,class: 'form-control form-control-lg', autofocus: true
+  .form-group
+    = f.submit 'Send', class: 'btn btn-lg btn-light'
