--- a/app/views/user_groups/index.html.haml
+++ b/app/views/user_groups/index.html.haml
@@ -1,9 +1,12 @@
-%h1.display-4
-  Groups
-  = link_to new_user_group_path, class: 'btn btn-light' do
-    = fa_icon 'plus', text: 'New'
+.row
+  .col
+    %h1.display-4
+      = t(:index, scope: :user_group)
+  .col-md-auto
+    .mt-3
+    = link_to t(:new, scope: :user_group), new_user_group_path, class: 'btn btn-outline-success'
 
 - if @user_groups.length > 0
   = render partial: 'table', locals: {user_groups: @user_groups}
 - else
-  No groups found...
+  No data sources found...
