--- a/app/views/devise/passwords/edit.html.haml
+++ b/app/views/devise/passwords/edit.html.haml
@@ -9,7 +9,7 @@
   .form-group
     = f.password_field :password_confirmation, autocomplete: 'off', class: 'form-control form-control-lg', placeholder: 'Confirm new password'
   .form-group
-    = f.submit 'Change my password', class: 'btn btn-light'
+    = f.submit 'Change my password', class: 'btn btn-lg btn-light'
   .form-group
     = link_to 'Log in', new_session_path(resource_name)
     or
