--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -14,4 +14,4 @@
   .form-group
     = f.password_field :password_confirmation, autocomplete: 'off', class: 'form-control form-control-lg', placeholder: 'Confirm password'
   .form-group
-    = f.submit 'Sign up', class: 'btn btn-light'
+    = f.submit 'Sign up', class: 'btn btn-lg btn-light'
