--- a/app/views/user_groups/_form.html.haml
+++ b/app/views/user_groups/_form.html.haml
@@ -1,4 +1,4 @@
-= form_for @user_group do |f|
+= form_with model: @user_group do |f|
   - if @user_group.errors.any?
     #error_explanation
       %h2= "#{pluralize(@user_group.errors.count, "error")} prohibited this user_group from being saved:"
@@ -7,8 +7,9 @@
           %li= message
 
   .form-group
-    = f.text_field :name, class: 'form-control form-control-lg', placeholder: 'Name'
+    = f.text_field :name, autofocus: true, class: 'form-control form-control-lg', placeholder: 'Name'
   .form-group
-    = f.text_area :description, class: 'form-control form-control-lg', placeholder: 'Description'
+    = f.text_area :description, rows: 15, class: 'form-control form-control-lg', placeholder: 'Description'
+    %small.form-text.text-muted You can write Markdown in the description.
   .form-group
-    = f.submit 'Save', class: 'btn btn-light'
+    = f.submit 'Save', class: 'btn btn-lg btn-light'
