--- a/app/views/user_groups/show.html.haml
+++ b/app/views/user_groups/show.html.haml
@@ -1,25 +1,27 @@
 %nav{role: 'navigation'}
   %ol.breadcrumb
-    %li.breadcrumb-item= link_to 'All groups', user_groups_path
-    %li.breadcrumb-item.active #{@user_group.name}
+    %li.breadcrumb-item= link_to t(:index, scope: :user_group), user_groups_path
+    %li.breadcrumb-item.active= @user_group.name.titleize
 
-%h1.display-5
-  = @user_group.name
+.row
+  .col
+    %h1.display-5= @user_group.name.titleize
+  .col-md-auto
+    .mt-2
+    - if @membership
+      = link_to 'Leave', user_group_membership_path(@user_group, @membership), method: :delete, remote: true, class: 'btn btn btn-outline-danger'
+    - else
+      = link_to 'Join', user_group_memberships_path(@user_group), method: :post, remote: true, class: 'btn btn btn-outline-success'
+
+.nav.nav-tabs
+  %li.nav-item
+    %span.nav-link.active= t(:show, scope: :user_group)
+  %li.nav-item
+    = link_to t(:index, scope: :user), user_group_memberships_path(@user_group), class: 'nav-link'
   - if policy(@user_group).update?
-    = link_to edit_user_group_path(@user_group), class: 'btn btn-light' do
-      = fa_icon 'pencil', text: 'Edit'
-  - if @membership
-    = link_to user_group_membership_path(@user_group, @membership), method: :delete, class: 'btn btn-light' do
-      = fa_icon 'times', text: 'Leave'
-  - else
-    = link_to user_group_memberships_path(@user_group), method: :post, class: 'btn btn-light' do
-      = fa_icon 'plus', text: 'Join'
+    %li.nav-item
+      = link_to t(:edit, scope: :user_group), edit_user_group_path(@user_group), class: 'nav-link'
 
-%p
-  Created #{time_ago_in_words @user_group.created_at} ago.
+.mb-3
 
-%p= @user_group.description
-
-- if @user_group.users.length > 0
-  %h1.display-6 Users
-  = render partial: 'users/table', locals: {users: @user_group.users}
+= render_markdown @user_group.description
