--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -1,15 +1,16 @@
 %nav{role: 'navigation'}
   %ol.breadcrumb
-    %li.breadcrumb-item= link_to 'All users', users_path
-    %li.breadcrumb-item.active #{@user.name}'s profile
+    %li.breadcrumb-item= link_to t(:index, scope: :user), users_path
+    %li.breadcrumb-item.active= @user.name.titleize
 
-%h1.display-5
-  = @user.name
-  = link_to conversations_path(conversation: { participant_id: @user.id }), method: :post do
-    = fa_icon 'envelope-o'
+.row
+  .col
+    %h1.display-5= @user.name.titleize
+  .col-md-auto
+    .mt-2
+    = link_to 'Send Message', conversations_path(conversation: { participant_id: @user.id }), method: :post, remote: true, class: 'btn btn btn-outline-success'
 
-%p
-  Member since #{time_ago_in_words @user.created_at}.
+.mb-3
 
 - if @user.user_groups.length > 0
   %h1.display-6 Groups
