--- a/app/views/data_sources/edit.html.haml
+++ b/app/views/data_sources/edit.html.haml
@@ -25,6 +25,17 @@
 .card.border-danger
   .card-body
     %p.card-text
+      = form_with model: @data_source do |f|
+        .row
+          .col
+            %h6 Restrict access to specific groups:
+            = f.collection_check_boxes :user_group_ids, @user_groups, :id, :name do |b|
+              .form-check.form-check-inline
+                = b.label(class: 'form-check-label') do
+                  = b.check_box(class: 'form-check-input') + link_to(b.text.titleize, b.object)
+          .col-md-auto
+            = f.submit 'Update Accessibility', class: 'btn btn-light text-danger'
+      %hr
       .row
         .col
           %h6 Delete this data source
