--- a/app/views/user_groups/edit.html.haml
+++ b/app/views/user_groups/edit.html.haml
@@ -38,3 +38,14 @@
           Once you delete a group, there is no going back. Please be certain.
         .col-md-auto
           = link_to 'Delete this group', @user_group, data: { confirm: "Are you sure?" }, method: :delete, remote: true, class: 'btn btn-light text-danger'
+      %hr
+      = form_with model: @user_group do |f|
+        .row
+          .col
+            %h6 Manage Users:
+            = f.collection_check_boxes :user_ids, User.all, :id, :name do |b|
+              .form-check.form-check-inline
+                = b.label(class: 'form-check-label') do
+                  = b.check_box(class: 'form-check-input') + link_to(b.text.titleize, b.object)
+          .col-md-auto
+            = f.submit 'Update Accessibility', class: 'btn btn-light text-danger'
