--- a/app/views/data_endpoints/new.html.haml
+++ b/app/views/data_endpoints/new.html.haml
@@ -3,7 +3,7 @@
     %li.breadcrumb-item= link_to t(:index, scope: :data_source), data_sources_path
     %li.breadcrumb-item= link_to @data_source.name.titleize, @data_source
     %li.breadcrumb-item= link_to t(:index, scope: :data_endpoint), data_source_data_endpoints_path(@data_source)
-    %li.breadcrumb-item.active= link_to t(:new, scope: :data_endpoint)
+    %li.breadcrumb-item.active= t(:new, scope: :data_endpoint)
 
 %h1.display-5
   = @data_source.name.titleize
