--- a/app/views/data_request_diffs/index.html.haml
+++ b/app/views/data_request_diffs/index.html.haml
@@ -5,7 +5,8 @@
     %li.breadcrumb-item= link_to t(:index, scope: :data_endpoint), [@data_source, :data_endpoints]
     %li.breadcrumb-item= link_to @data_endpoint.name.titleize, [@data_source, @data_endpoint]
     %li.breadcrumb-item= link_to t(:index, scope: :data_request), [@data_source, @data_endpoint, :data_requests]
-    %li.breadcrumb-item.active ##{@data_request.id}
+    %li.breadcrumb-item= link_to "##{@data_request.id}", [@data_source, @data_endpoint, @data_request]
+    %li.breadcrumb-item.active= t(:index, scope: :data_request_diff)
 
 %h1.display-5= @data_source.name.titleize
 
@@ -22,21 +23,14 @@
 
 .nav.nav-tabs
   %li.nav-item
-    %span.nav-link.active= t(:show, scope: :data_request)
+    = link_to t(:show, scope: :data_request), [@data_source, @data_endpoint, @data_request], class: 'nav-link'
   %li.nav-item
-    = link_to t(:index, scope: :data_request_diff), [@data_source, @data_endpoint, @data_request, :data_request_diffs], class: 'nav-link'
+    %span.nav-link.active= t(:index, scope: :data_request_diff)
 
-- if @data_request.params.present?
-  .mb-3
-  %pre
-    %code= JSON.pretty_generate @data_request.params
+.mb-3
 
-- if @data_request.response.present?
-  .mb-3
-  %h4
-    Response
-    %small
-      = link_to [@data_source, @data_endpoint, @data_request, format: :json], download: true do
-        = fa_icon :download
-  %pre.pre-scrollable
-    %code= JSON.pretty_generate @data_request.response
+- if @data_requests.length > 0
+  = render layout: 'data_requests/table', locals: {data_requests: @data_requests} do |data_request_compared|
+    = link_to "Diff with Request ##{data_request_compared.id}", data_source_data_endpoint_data_request_data_request_diff_path(@data_source, @data_endpoint, @data_request, data_request_compared)
+- else
+  No requests found...
