--- a/app/views/data_requests/_table.html.haml
+++ b/app/views/data_requests/_table.html.haml
@@ -7,6 +7,6 @@
   %tbody
     - data_requests.each do |data_request|
       %tr
-        %td= link_to "Request ##{data_request.id}", [data_request.data_endpoint.data_source, data_request.data_endpoint, data_request]
+        %td= yield data_request
         %td= data_request.url
         %td= l data_request.created_at
