--- a/app/views/data_report_requests/index.html.haml
+++ b/app/views/data_report_requests/index.html.haml
@@ -4,12 +4,7 @@
     %li.breadcrumb-item= link_to @data_report.name.titleize, @data_report
     %li.breadcrumb-item.active= t(:index, scope: :data_report_request)
 
-.row
-  .col
-    %h1.display-5= @data_report.name.titleize
-  .col-md-auto
-    .mt-2
-      = link_to 'Print', '', class: 'btn btn btn-outline-success print-link'
+%h1.display-5= @data_report.name.titleize
 
 .nav.nav-tabs
   %li.nav-item
@@ -23,6 +18,6 @@
 
 - if @data_requests.length > 0
   = render layout: 'data_requests/table', locals: {data_requests: @data_requests} do |data_request|
-    = link_to "#{t(:index, scope: :data_report_request)} ##{data_request.id}", data_source_data_endpoint_data_request_data_request_report_path(data_request.data_source, data_request.data_endpoint, data_request, @data_report), method: :put
+    = link_to "Add ##{data_request.id}", data_source_data_endpoint_data_request_data_request_report_path(data_request.data_source, data_request.data_endpoint, data_request, @data_report), method: :put
 - else
   No requests found...
