--- a/app/views/data_request_diffs/index.html.haml
+++ b/app/views/data_request_diffs/index.html.haml
@@ -33,6 +33,6 @@
 
 - if @data_requests.length > 0
   = render layout: 'data_requests/table', locals: {data_requests: @data_requests} do |data_request_compared|
-    = link_to "#{t(:index, scope: :data_request_diff)} Request ##{data_request_compared.id}", data_source_data_endpoint_data_request_data_request_diff_path(@data_source, @data_endpoint, @data_request, data_request_compared)
+    = link_to "#{t(:index, scope: :data_request_diff)} ##{data_request_compared.id}", data_source_data_endpoint_data_request_data_request_diff_path(@data_source, @data_endpoint, @data_request, data_request_compared)
 - else
   No requests found...
